generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Owner {
  id           String    @id @default(cuid())
  firstname    String
  lastname     String
  email        String
  gender       String
  profileImage String
  accounts     Account[]
}

model Account {
  accountNo    String        @id @default(cuid())
  acctType     String
  balance      Float
  dateOpened   DateTime      @default(now())
  ownerId      String
  Owner        Owner         @relation(fields: [ownerId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  transactions Transaction[]
}

model Transaction {
  transId   Int      @id @default(autoincrement())
  transType String
  amount    Float
  date      DateTime @default(now())
  accountNo String
  Account   Account  @relation(fields: [accountNo], references: [accountNo], onDelete: Cascade, onUpdate: Cascade)
}
